@@ -1,5 +1,6 @@
 August 2015: Version 1.3.4
 
+- New Feature: Chess960 / Fischerandom Support
 - New Feature: Game matches with sudden death timing
 - New Feature: Let two engines play out a game (engine match)
 - New Feature: #104 Display arbitrary tags in game list
@@ -16,6 +17,8 @@ August 2015: Version 1.3.4
 - New feature: Make images flipped if mainboard is flipped
 - New feature: B/W images of board
 
+- Bugfix: Opening Tree might crash
+- Bugfix: Player Opening Statistics wrong
 - Bugfix: Do not indicate premove in FICS puzzle mode
 - Bugfix: Output would occasionally write orphaned x... to HTML
 - Bugfix: Size of slider text (thx to Byrial Jensen)
@@ -31,6 +34,11 @@ August 2015: Version 1.3.4
 - Bugfix: Progress not indicated for searching operations
 - Bugfix: Rendering board would occasionally draw offset twice
 - Bugfix: Qt4 compatibility
+
+- Changed: Force writing variations from Engine even if no move exists
+- Changed: Set Result at end of game against engine
+- Changed: Do not elide tab text of boards
+- Changed: Reduce memory needed for RW-Databases
 
 May 2015: Version 1.3.2
 
